# sorrek-dataroom

./: LICENSE.txt  README.rst  pyproject.toml  requirements.txt
src/sorrek_dataroom/: api.py
src/sorrek_dataroom.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
