[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sorrek-dataroom"
version = "1.0.0"
authors = [
  { name="Ariel Lavi", email="ariel@sorrek.io" },
]
description = "For use with the Sorrek Dataroom product"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sorrek/sorrek-dataroom/sorrek-dataroom"
"Bug Tracker" = "https://github.com/sorrek/sorrek-dataroom/issues"